# ckatool

./: README.md  pyproject.toml
dataset/3darmgaze_output/: s1_test_RNP_after_targets_pairs.csv
dataset/armcoda_output/: armcoda_subject0_movement10.csv
dataset/intellirehab_output/: 102_18_3_4_1_stand.csv  212_18_3_3_1_wheelchair.csv
src/ckatool/: __init__.py
src/ckatool/cli/: dataset_converter.py
src/ckatool/lib/: limb.py  smoothness.py
