[project]
name = "ckatool"
version = "0.1.0"
description = "Tool for analyzing upper limb movement using 3D motion tracking data."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "numpy>=2",
    "orjson>=3.10.18",
    "polars>=1.30.0",
    "rerun-sdk>=0.23.1",
    "scipy>=1.15.3",
]

[project.scripts]
main = "ckatool:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]

[tool.ruff]
line-length = 120
